@@ -1,3 +1,7 @@
+2004-05-20    <chromakode@llama>
+
+	* fgdiag/lib/logging.py (_LogReceptor): Made private
+
 2004-05-18    <chromakode@llama>
 
 	* fgdiag/lib/fgdb.py (Module): Major rewrite of SQL Generation code
